Refactor logging
Only use custom loggers. Simpler than using Akka logging

Signed-off-by: rtatton <rdt17@protonmail.com>