@@ -1,27 +1,27 @@
 package io.sharetrace.logging;
 
 import ch.qos.logback.core.spi.PropertyContainer;
+import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
 import java.nio.file.Path;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
 import net.logstash.logback.argument.StructuredArguments;
 import org.slf4j.LoggerFactory;
+import org.slf4j.MDC;
 
 public final class Logging {
 
-  public static final String EVENTS_LOGGER_NAME = "EventsLogger";
-  public static final String METRICS_LOGGER_NAME = "MetricsLogger";
-  public static final String SETTINGS_LOGGER_NAME = "SettingsLogger";
-
+  private static final Map<String, String> mdc = new Object2ObjectOpenHashMap<>();
   private static final Set<Class<? extends Loggable>> enabled = new ObjectOpenHashSet<>();
 
   private Logging() {}
 
   public static Logger metricsLogger() {
-    return logger(LoggerFactory.getLogger(METRICS_LOGGER_NAME));
+    return logger(LoggerFactory.getLogger("MetricsLogger"));
   }
 
   public static Logger logger(org.slf4j.Logger delegate) {
@@ -37,8 +37,12 @@ public final class Logging {
     };
   }
 
+  public static Logger eventsLogger() {
+    return logger(LoggerFactory.getLogger("EventsLogger"));
+  }
+
   public static Logger settingsLogger() {
-    return logger(LoggerFactory.getLogger(SETTINGS_LOGGER_NAME));
+    return logger(LoggerFactory.getLogger("SettingsLogger"));
   }
 
   public static Path graphsPath() {
@@ -46,8 +50,13 @@ public final class Logging {
     return Path.of(properties.getProperty("graphs.log.dir"));
   }
 
-  public static Map<String, String> mdc(String stateId) {
-    return Map.of("sid", stateId);
+  public static synchronized void setMdc(String stateId) {
+    mdc.put("sid", stateId); // MDC for all threads
+    MDC.setContextMap(mdc); // Still set MDC for calling/main thread.
+  }
+
+  public static Map<String, String> mdc() {
+    return Collections.unmodifiableMap(mdc);
   }
 
   public static synchronized void setLoggable(Collection<Class<? extends Loggable>> loggable) {
